--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="aframe-html-shader.min.js"></script>
 
 </head>
 <body>
+    <div class="text">
+        <p id="element">NEON</p>
+    </div>
+
+
     <a-scene>
         <a-assets>
             <img src="001.jpg" id="sky">
-        </a-assets>		
+        </a-assets>	
+        
+        <a-camera>
+            <a-cursor></a-cursor>
+        </a-camera>
+        
         <a-sky src="#sky"></a-sky>
         <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
         <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
         <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
         <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+        <a-entity class="link-object" data-link="https://tanson321.github.io/neon_css/" geometry="primitive: circle; radius: 0.2" position="-1 1.5 -2" material="shader: html; target: #element; transparent: true;" rotation="0 -2 0"></a-entity>
     </a-scene>
 
 <script src="script.js"></script> 
