--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <a-scene>
         <a-assets>
-            <img src="001.jpg" id="sky">
+            <img src="office.JPG" id="sky">
         </a-assets>	
         
         <a-camera>
