--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="aframe-html-shader.min.js"></script>
-    <script src="html2canvas.min.js"></script>
 
     <link rel="stylesheet" href="stylesheet.css">
 
+    <title>VR SPY</title>
+
 </head>
 <body>
-    <div class="text">
-        <p id="element">Link</p>
-    </div>
 
-    <a-scene>
+    <a-scene id="scene">
+
         <a-assets>
             <img src="office.JPG" id="sky">
         </a-assets>	
@@ -38,13 +36,9 @@
         
         <a-sky src="#sky"></a-sky>
 
-        <!--<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>-->
-
         <a-plane position="0 2 -5.2" rotation="0 0 0" width="6" height="5" color="white" opacity="0.4" material="shader: html; target: #direction;"></a-plane>
 
-        <a-entity onclick="driverDone()" geometry="primitive: circle; radius: 0.3" position="-2 -0.3 1.3" material="shader: html; target: #element; transparent:true;" rotation="-30 110 0"></a-entity>
+        <a-entity onclick="driverDone()" geometry="primitive: circle; radius: 0.3" position="-2 -0.3 1.3" material="opacity: 0;" rotation="-30 110 0"></a-entity>
     </a-scene>
 
 <script src="script.js"></script> 
